@startuml
class Pedido {
  - tipo: String
  - tiempoPreparacion: int
  - tiempoRestante: int
  - minutoLlegada: int
  ..
  + toString(): String
}
class Restaurante {
  - PLATOS: String[5]
  - RANGOS: int[5][2]
  - cola: ArrayList<Pedido>
  - cocinando: Pedido
  - rand: Random
  - minutoActual: int
  - pedidosAtendidos: int
  - tiempoTotalEspera: long
  - comparaciones: int
  ..
  + Restaurante()
  + avanzarMinuto()
  + getPedidosPendientes(): int
  + cerrar()
}
class Simulation {
  ..
  + main(args: String[]): void
}

Simulation --> Restaurante : usa
Restaurante "1" *-- "0..*" Pedido : contiene >
@enduml